# hyo

./: .gitignore  Cargo.0130dbee.toml  Cargo.e8276d5e.toml  Cargo.toml  LICENSE  README.md  hyo.57e52dda.css  hyo.57e52dda.css.map  hyo.7b7d5ff5.css  hyo.7b7d5ff5.css.map  hyo.c8164f43.css  hyo.c8164f43.css.map  hyo.d238ab23.css  hyo.d238ab23.css.map  hyo.ef7d3b77.css  hyo.ef7d3b77.css.map  hyo_bg.737f2328.wasm  hyo_bg.770c0083.wasm  hyo_bg.c1290f49.wasm  hyo_bg.cb745d0e.wasm  hyo_bg.d4ad405c.wasm  index.html  justfile  package-lock.json  package.json  site.56cb3a24.js  site.56cb3a24.js.map  site.59abe4ad.js  site.59abe4ad.js.map  site.6d93baa7.js  site.6d93baa7.js.map  site.985958aa.js  site.985958aa.js.map
.github/workflows/: ci.yaml  ci.yml  main.yml
hyo-bridge/: Cargo.toml
hyo-bridge/src/: rest.rs
hyo-client/: .gitignore  Cargo.toml  README.md  justfile  package-lock.json
hyo-client/site/scss/: _core.scss  _icons.scss  hyo.scss
hyo-client/site/scss/components/: _button.scss  _pile.scss  _table.scss
hyo-client/site/scss/components/layout/: _circle.scss
hyo-client/site/scss/ui/: _card.scss
hyo-client/site/scss/variables/: _fonts.scss
hyo-client/site/scss/views/: _games.scss  _index.scss  _start.scss
hyo-client/src/: api.rs  app.rs  game.rs  js.rs  lib.rs  locale.rs  websocket.rs
hyo-client/src/components/: game.rs  image.rs  mod.rs
hyo-client/src/views/: games.rs  loading.rs  mod.rs  start.rs
hyo-client/static/: index.html
hyo-fluent/: Cargo.toml
hyo-fluent/src/: lib.rs
hyo-game/: Cargo.toml
hyo-game/src/: assets.rs  game.rs  lib.rs  locale.rs  manifest.rs
hyo-server/: Cargo.toml  justfile
hyo-server/src/: game.rs  library.rs  main.rs  session.rs  worker.rs
hyo-server/src/session/: connection.rs  mod.rs  player.rs  server.rs  session.rs
hyo-server/src/uno/: game.rs  msg.rs
locale/: en-GB.ftl
site/: hyo.css  index.html  index.js
site/scss/: _components.scss  _core.scss  _fonts.scss  _icons.scss  _views.scss  hyo.scss
site/scss/components/: _button.scss  _card.scss  _hand.scss  _layout.scss  _pile.scss  _table.scss
site/scss/components/layout/: _circle.scss  _index.scss
site/scss/mixins/: _background.scss
site/scss/mixins/patterns/: _index.scss  _seigaiha.scss  _upholstry.scss
site/scss/variables/: _colors.scss
site/scss/views/: _index.scss  _start.scss
src/: app.rs  fetch.rs  game.rs  lib.rs  locale.rs
src/components/: card.rs  hand.rs  icon.rs  mod.rs  pile.rs
src/components/layout/: circle.rs
src/views/: start.rs
