[package]
name = "hyo"
version = "0.0.1"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
fluent = "0.12"
futures = "0.3"
js-sys = "0.3"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
unic-langid = { version = "0.9", features = ["macros"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.15"

[dependencies.web-sys]
version = "0.3"
features = [
    "Navigator",
    "Request",
    "RequestInit",
    "Storage",
    "Window",
]
