[package]
name = "hyo"
version = "0.0.1"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyo-fluent = { path = "../hyo-fluent" }

futures = "0.3"
js-sys = "0.3"
log = "0.4"
serde = "1.0"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.16"

[dependencies.web-sys]
version = "0.3"
features = [
    "Navigator",
    "Request",
    "RequestInit",
    "Storage",
    "Window",
]
