[package]
name = "hyo"
version = "0.0.1"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyo-bridge = { path = "../hyo-bridge" }
hyo-fluent = { path = "../hyo-fluent" }
anyhow = "1.0"
futures = "0.3"
js-sys = "0.3"
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
thiserror = "1.0"
url = "2.1"
wasm-bindgen = { version = "0.2", features = ["nightly", "serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.16"

[dependencies.web-sys]
version = "0.3"
features = [
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "Location",
    "MessageEvent",
    "Navigator",
    "Storage",
    "WebSocket",
    "Window",
]
