[package]
name = "hyo-fluent"
version = "0.0.1"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.12"
fluent-langneg = "0.13"
thiserror = "1.0"
unic-langid = { version = "0.9", features = ["macros", "serde"] }
