[package]
name = "hyo-game"
version = "0.0.1"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
unic-langid = { version = "0.9", features = ["serde"] }
