[package]
name = "hyo-game"
version = "0.0.1"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyo-fluent = { path = "../hyo-fluent" }

anyhow = "1.0"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
