[package]
name = "hyo-server"
version = "0.0.1"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"

[dependencies]
hyo-fluent = { path = "../hyo-fluent" }
hyo-game = { path = "../hyo-game" }

anyhow = "1.0"
log = "0.4"
rand = "0.7"
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "uuid"]
